fixes to align with home laptop

--- a/static/collapse.css
+++ b/static/collapse.css
@@ -6,7 +6,7 @@
   color: #444;
   cursor: pointer;
   padding: 18px;
-  width: 300px;
+  width: 15vw;
   border: none;
   text-align: left;
   outline: none;
@@ -25,7 +25,7 @@
   display: none;
   overflow: hidden;
   background-color: #f1f1f1;
-  width: 300px;
+  width: 15vw;
   border: 1px solid black;
 }
 .collapsible:after {
